--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   </div>
   
   <div class="video">
-    <video src="/assets/images/video.mp4" autoplay loop muted></video>
+    <video src="assets/images/video.mp4" autoplay loop muted></video>
     <div class="watch">
-      <img src="/assets/images/watch.png" alt="" />
+      <img src="assets/images/watch.png" alt="" />
       <h2>Double tap. A magical new way to use Apple Watch.</h2>
       <div class="btn-contain">
       <a class="big-btn" href="#">Learn more</a>
