--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="/assets/images/monarch.jpeg" alt="">
+        <img src="assets/images/monarch.jpeg" alt="">
       </div>
       <div class="swiper-slide">
-        <img src="/assets/images/fountdation.jpeg" alt="">
+        <img src="assets/images/fountdation.jpeg" alt="">
       </div>
       <div class="swiper-slide">
-        <img src="/assets/images/family.jpeg" alt="">
+        <img src="assets/images/family.jpeg" alt="">
       </div>
       <div class="swiper-slide">
-        <img src="/assets/images/jack.jpeg" alt="">
+        <img src="assets/images/jack.jpeg" alt="">
       </div>
       <div class="swiper-slide">
-        <img src="/assets/images/killer.jpeg" alt="">
+        <img src="assets/images/killer.jpeg" alt="">
       </div>
       <div class="swiper-slide">
-        <img src="/assets/images/morning.jpeg" alt="">
+        <img src="assets/images/morning.jpeg" alt="">
       </div>
     </div>
     <div class="swiper-pagination"></div>
