--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="watch-2">
-      <img class="p-h1" src="/assets/images/watch2.png" alt="" />
+      <img class="p-h1" src="assets/images/watch2.png" alt="" />
       <h2 class="p-h2">Next-level adventure.</h2>
       <a class="btn p-a" href="#">Learn more</a>
       <a class="btn p-a" href="#">Buy</a>
@@ -104,7 +104,7 @@
     </div>
 
     <div class="tradein">
-      <img src="/assets/images/tradein.png" alt="" class="p-h1" />
+      <img src="assets/images/tradein.png" alt="" class="p-h1" />
       <h2 class="p-h2">Upgrade and save.It's that easy</h2>
       <a class="btn p-a" href="#">See what your devise is worth</a>
     </div>
